2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* tag-release.sh: Correct editing of arc-versions.sh
	* arc-clone-all.sh: Really add the file.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* tag-release.sh: Correct typo.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: New file.
	* arc-versions.sh: Modified to use the upstream stable Linux repo
	and branch.
	* README.md: Modified to refer to the upstream stable Linux repo
	and to refer to arc-clone-all.sh.
	* tag-release.sh: No need to modify arc-versions.sh not to pull,
	explicitly use /bin/sh.

2013-05-14  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Modified to work if we are currently in
	detached HEAD state.

2013-05-14  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Explicitly choose /bin/sh.
	* build-all.sh: Change == to = in tests throughout.
	* build-elf32.sh: Change == to = in tests throughout.
	* check-results.sh: Change == to = in tests throughout, use
	/bin/sh, not /bin/bash.
	* diff-all.sh: Use /bin/sh, not /bin/bash.
	* diff-tests.sh: Likewise
	* get-ip.sh: Change == to = in tests throughout, use
	/bin/sh, not /bin/bash.

2013-05-09  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: No need to delete C++ libraries.
	* check-results.sh: Better alignment for 6 digit totals.

2013-05-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Do not explicitly use --enable-multilib when
	configuring, since it is the default and being explicit triggers
	PR45174.

2013-04-30  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-nsim.exp: Load nsim-extra.exp, initialize
	port with nsim_open.
	* dejagnu/nsim-extra.exp: New file.

2013-04-29  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Fix typo in test of DO_SIM.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Some improvements for Linux 3.8.
